Fix the Jupyter result

--- a/playbook.ipynb
+++ b/playbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,22 +21,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<!DOCTYPE html>\\n<html lang=\"en\">\\n  <head>\\n    <meta charset=\"utf-8\">\\n    <title>WaniKani Community</title>\\n    <meta name=\"description\" content=\"Discussions about WaniKani, Japanese language and culture, and the ultimate answer to the ultimate question\">\\n    <meta name=\"author\" content=\"\">\\n<meta name=\"generator\" content=\"Discourse 2.0.0.beta1 - https://github.com/discourse/discourse version 1fac2ecb56983691cbac237dca91270e565682b2\">\\n<link rel=\"icon\" type=\"image/png\" href=\"/uploads/wanikani_community/original/3X/4/2/4227eef8ddb68e62c8f609fb2444d8c1de6ac5fb.ico\">\\n<link rel=\"apple-touch-icon\" type=\"image/png\" href=\"/uploads/wanikani_community/original/3X/4/9/498f32a48b0b17db8e9373f0b7cd0d4fe7366125.png\">\\n<link rel=\"icon\" type=\"image/png\" sizes=\"144x144\" href=\"/uploads/wanikani_community/original/3X/4/9/498f32a48b0b17db8e9373f0b7cd0d4fe7366125.png\">\\n<meta name=\"theme-color\" content=\"#ffffff\">\\n<meta name=\"viewport\" content=\"width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes\">\\n\\n<script type=\"application/ld+json\">{\"@context\":\"http://schema.org\",\"@type\":\"WebSite\",\"url\":\"https://community.wanikani.com\",\"potentialAction\":{\"@type\":\"SearchAction\",\"target\":\"https://community.wanikani.com/search?q={search_term_string}\",\"query-input\":\"required name=search_term_string\"}}</script>\\n<link rel=\"search\" type=\"application/opensearchdescription+xml\" href=\"https://community.wanikani.com/opensearch.xml\" title=\"WaniKani Community Search\">\\n\\n        <link href=\"https://discourse-cdn-sjc1.com/business2/stylesheets/desktop_e97643bdf066e0c3b81c26cb397b9bd611c93d7c.css?__ws=community.wanikani.com\" media=\"all\" rel=\"stylesheet\" data-target=\"desktop\"/>\\n    <script>Discourse._registerPluginCode(\\'0.4\\', function (api) {\\n\\n  api.onPageChange(function (url, title) {\\n    if ($(\\'body.archetype-private_message\\').length > 0) {\\n      message = $(\\'<div />\\', {\\n        class: \\'private-message_warning\\',\\n        html: \\'<strong>Warning:</strong> Private messages are viewable by Administrators. If flagged, someone will take a look. For truly private messages, we recommend using something else.\\'\\n      });\\n\\n      $(\\'.private_message\\').prepend(message);\\n    }\\n  });\\n});</script>\\n    <script>\\n  (function(i,s,o,g,r,a,m){i[\\'GoogleAnalyticsObject\\']=r;i[r]=i[r]||function(){\\n  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),\\n  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)\\n  })(window,document,\\'script\\',\\'//www.google-analytics.com/analytics.js\\',\\'ga\\');\\n\\n  ga(\\'create\\', \\'UA-1960021-27\\', {\"cookieDomain\":\"auto\"});\\n\\n\\n</script>\\n\\n    \\n  </head>\\n  <body class=\"crawler\">\\n    \\n    <header>\\n      <a href=\"/\"><img src=\"/uploads/wanikani_community/original/3X/e/f/ef1160d65be1c1c3e7fe4b6d3a66ae97bcb1eafd.png\" alt=\"WaniKani Community\" id=\"site-logo\" style=\"max-width: 150px;\"></a>\\n    </header>\\n    <div id=\"main-outlet\" class=\"wrap\">\\n      \\n    </div>\\n    <footer class=\"container\">\\n      <nav itemscope itemtype=\\'http://schema.org/SiteNavigationElement\\'>\\n        <a href=\\'/\\'>Home</a>\\n        <a href=\"/categories\">Categories</a>\\n        <a href=\"/guidelines\">FAQ/Guidelines</a>\\n        <a href=\"/tos\">Terms of Service</a>\\n        <a href=\"/privacy\">Privacy Policy</a>\\n      </nav>\\n      <p>Powered by <a href=\"https://www.discourse.org\">Discourse</a>, best viewed with JavaScript enabled</p>\\n    </footer>\\n    <script type=\"text/javascript\">\\n  $(\\'.user-title a.user-group\\').on(\\'click\\', function(event) {\\n    event.preventDefault();\\n  });\\n</script>\\n\\n  </body>\\n  \\n</html>\\n'"
+       "{'badge_types': [{'id': 2, 'name': 'Silver', 'sort_order': 8},\n",
+       "  {'id': 1, 'name': 'Gold', 'sort_order': 9}],\n",
+       " 'badges': [{'allow_title': True,\n",
+       "   'badge_grouping_id': 4,\n",
+       "   'badge_type_id': 2,\n",
+       "   'description': '<a href=\"https://meta.discourse.org/t/what-do-user-trust-levels-do/4924/6\">Granted</a> recategorize, rename, followed links, wiki, more likes',\n",
+       "   'enabled': True,\n",
+       "   'grant_count': 73,\n",
+       "   'icon': 'fa-user',\n",
+       "   'id': 3,\n",
+       "   'image': None,\n",
+       "   'listable': True,\n",
+       "   'manually_grantable': False,\n",
+       "   'multiple_grant': False,\n",
+       "   'name': 'Regular',\n",
+       "   'slug': 'regular',\n",
+       "   'system': True},\n",
+       "  {'allow_title': False,\n",
+       "   'badge_grouping_id': 2,\n",
+       "   'badge_type_id': 1,\n",
+       "   'description': 'Has 500 liked posts and gave 1000 likes',\n",
+       "   'enabled': True,\n",
+       "   'grant_count': 31,\n",
+       "   'icon': 'fa-heart',\n",
+       "   'id': 39,\n",
+       "   'image': None,\n",
+       "   'listable': True,\n",
+       "   'manually_grantable': False,\n",
+       "   'multiple_grant': False,\n",
+       "   'name': 'Empathetic',\n",
+       "   'slug': 'empathetic',\n",
+       "   'system': True},\n",
+       "  {'allow_title': False,\n",
+       "   'badge_grouping_id': 1,\n",
+       "   'badge_type_id': 2,\n",
+       "   'description': 'Completed our advanced user tutorial',\n",
+       "   'enabled': True,\n",
+       "   'grant_count': 54,\n",
+       "   'icon': 'fa-certificate',\n",
+       "   'id': 105,\n",
+       "   'image': None,\n",
+       "   'listable': True,\n",
+       "   'manually_grantable': False,\n",
+       "   'multiple_grant': False,\n",
+       "   'name': 'Licensed',\n",
+       "   'slug': 'licensed',\n",
+       "   'system': True}],\n",
+       " 'user': {'admin': False,\n",
+       "  'avatar_template': '/user_avatar/community.wanikani.com/polv/{size}/427_1.png',\n",
+       "  'badge_count': 33,\n",
+       "  'bio_cooked': '<p>ありがとうって、溢れ出して来ました。でも、卒業したい〜</p>',\n",
+       "  'bio_excerpt': 'ありがとうって、溢れ出して来ました。でも、卒業したい〜',\n",
+       "  'bio_raw': 'ありがとうって、溢れ出して来ました。でも、卒業したい〜',\n",
+       "  'can_change_bio': False,\n",
+       "  'can_edit': True,\n",
+       "  'can_edit_email': False,\n",
+       "  'can_edit_name': False,\n",
+       "  'can_edit_username': False,\n",
+       "  'can_send_private_message_to_user': False,\n",
+       "  'can_send_private_messages': True,\n",
+       "  'card_background': '/uploads/wanikani_community/original/3X/e/5/e5f39bf6669bc7997905056f0505d36d67f5aa54.gif',\n",
+       "  'card_badge': None,\n",
+       "  'created_at': '2012-08-16T23:33:46.437Z',\n",
+       "  'custom_avatar_template': None,\n",
+       "  'custom_avatar_upload_id': None,\n",
+       "  'custom_fields': {},\n",
+       "  'date_of_birth': None,\n",
+       "  'email': 'patarapolw@gmail.com',\n",
+       "  'featured_user_badge_ids': [39642, 67873, 68149],\n",
+       "  'gravatar_avatar_template': '/user_avatar/community.wanikani.com/polv/{size}/427_1.png',\n",
+       "  'gravatar_avatar_upload_id': 427,\n",
+       "  'group_users': [{'group_id': 10,\n",
+       "    'notification_level': 2,\n",
+       "    'owner': False,\n",
+       "    'user_id': 562},\n",
+       "   {'group_id': 11, 'notification_level': 2, 'owner': False, 'user_id': 562},\n",
+       "   {'group_id': 12, 'notification_level': 2, 'owner': False, 'user_id': 562},\n",
+       "   {'group_id': 13, 'notification_level': 3, 'owner': False, 'user_id': 562},\n",
+       "   {'group_id': 160, 'notification_level': 3, 'owner': False, 'user_id': 562},\n",
+       "   {'group_id': 222, 'notification_level': 2, 'owner': False, 'user_id': 562}],\n",
+       "  'groups': [{'allow_membership_requests': False,\n",
+       "    'automatic': True,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'display_name': 'trust_level_0',\n",
+       "    'flair_bg_color': None,\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': None,\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 10,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'trust_level_0',\n",
+       "    'primary_group': False,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 39049,\n",
+       "    'visibility_level': 0},\n",
+       "   {'allow_membership_requests': False,\n",
+       "    'automatic': True,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'display_name': 'trust_level_1',\n",
+       "    'flair_bg_color': None,\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': None,\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 11,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'trust_level_1',\n",
+       "    'primary_group': False,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 38991,\n",
+       "    'visibility_level': 0},\n",
+       "   {'allow_membership_requests': False,\n",
+       "    'automatic': True,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'display_name': 'trust_level_2',\n",
+       "    'flair_bg_color': None,\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': None,\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 12,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'trust_level_2',\n",
+       "    'primary_group': False,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 1898,\n",
+       "    'visibility_level': 0},\n",
+       "   {'allow_membership_requests': False,\n",
+       "    'automatic': True,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'display_name': 'trust_level_3',\n",
+       "    'flair_bg_color': None,\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': None,\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 13,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'trust_level_3',\n",
+       "    'primary_group': False,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 74,\n",
+       "    'visibility_level': 0},\n",
+       "   {'allow_membership_requests': False,\n",
+       "    'automatic': False,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'flair_bg_color': 'fbc042',\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': 'Level 60 (Paid)',\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 160,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'level-60-paid',\n",
+       "    'primary_group': True,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 155,\n",
+       "    'visibility_level': 1},\n",
+       "   {'allow_membership_requests': False,\n",
+       "    'automatic': False,\n",
+       "    'automatic_membership_email_domains': None,\n",
+       "    'automatic_membership_retroactive': False,\n",
+       "    'bio_cooked': None,\n",
+       "    'bio_raw': None,\n",
+       "    'default_notification_level': 3,\n",
+       "    'flair_bg_color': None,\n",
+       "    'flair_color': None,\n",
+       "    'flair_url': None,\n",
+       "    'full_name': 'Paid',\n",
+       "    'grant_trust_level': None,\n",
+       "    'has_messages': False,\n",
+       "    'id': 222,\n",
+       "    'membership_request_template': None,\n",
+       "    'mentionable_level': 0,\n",
+       "    'messageable_level': 0,\n",
+       "    'name': 'paid',\n",
+       "    'primary_group': False,\n",
+       "    'public_admission': False,\n",
+       "    'public_exit': False,\n",
+       "    'title': None,\n",
+       "    'user_count': 9926,\n",
+       "    'visibility_level': 1}],\n",
+       "  'has_title_badges': True,\n",
+       "  'id': 562,\n",
+       "  'invited_by': None,\n",
+       "  'last_posted_at': '2018-02-02T03:49:01.541Z',\n",
+       "  'last_seen_at': '2018-02-02T20:46:52.869Z',\n",
+       "  'locale': 'en',\n",
+       "  'location': 'どこでもドア',\n",
+       "  'mailing_list_posts_per_day': 100,\n",
+       "  'moderator': False,\n",
+       "  'muted_category_ids': [],\n",
+       "  'muted_tags': [],\n",
+       "  'muted_usernames': [],\n",
+       "  'pending_count': 0,\n",
+       "  'primary_group_flair_bg_color': 'fbc042',\n",
+       "  'primary_group_flair_color': None,\n",
+       "  'primary_group_flair_url': None,\n",
+       "  'primary_group_name': 'level-60-paid',\n",
+       "  'profile_background': '/uploads/wanikani_community/original/3X/b/b/bb929b34e26dbd4bc0186f399dcc87e61d244fc1.png',\n",
+       "  'profile_view_count': 1298,\n",
+       "  'recent_time_read': 197723,\n",
+       "  'system_avatar_template': 'https://avatars.discourse.org/v2/letter/p/22d042/{size}.png',\n",
+       "  'system_avatar_upload_id': None,\n",
+       "  'time_read': 1717172,\n",
+       "  'title': 'i am really level 59',\n",
+       "  'tracked_category_ids': [],\n",
+       "  'tracked_tags': [],\n",
+       "  'trust_level': 3,\n",
+       "  'uploaded_avatar_id': 427,\n",
+       "  'user_api_keys': None,\n",
+       "  'user_option': {'allow_private_messages': True,\n",
+       "   'auto_track_topics_after_msecs': 240000,\n",
+       "   'automatically_unpin_topics': True,\n",
+       "   'digest_after_minutes': 10080,\n",
+       "   'disable_jump_reply': False,\n",
+       "   'dynamic_favicon': False,\n",
+       "   'email_always': False,\n",
+       "   'email_digests': True,\n",
+       "   'email_direct': True,\n",
+       "   'email_in_reply_to': True,\n",
+       "   'email_previous_replies': 2,\n",
+       "   'email_private_messages': True,\n",
+       "   'enable_quoting': True,\n",
+       "   'external_links_in_new_tab': False,\n",
+       "   'homepage_id': None,\n",
+       "   'include_tl0_in_digests': False,\n",
+       "   'like_notification_frequency': 1,\n",
+       "   'mailing_list_mode': False,\n",
+       "   'mailing_list_mode_frequency': 0,\n",
+       "   'new_topic_duration_minutes': 2880,\n",
+       "   'notification_level_when_replying': 2,\n",
+       "   'theme_key': '7e202ef2-6666-47d5-98d8-a9c8d15e57dd',\n",
+       "   'theme_key_seq': 1,\n",
+       "   'user_id': 562},\n",
+       "  'username': 'polv',\n",
+       "  'watched_category_ids': [],\n",
+       "  'watched_first_post_category_ids': [],\n",
+       "  'watched_tags': [],\n",
+       "  'watching_first_post_tags': [],\n",
+       "  'website': 'http://lang-8.com/1470705/journals',\n",
+       "  'website_name': 'lang-8.com/1470705/journals'},\n",
+       " 'user_badges': [{'badge_id': 3,\n",
+       "   'count': 1,\n",
+       "   'granted_at': '2017-04-25T04:00:41.157Z',\n",
+       "   'granted_by_id': -1,\n",
+       "   'id': 39642,\n",
+       "   'user_id': 562},\n",
+       "  {'badge_id': 39,\n",
+       "   'count': 1,\n",
+       "   'granted_at': '2017-10-07T03:26:34.019Z',\n",
+       "   'granted_by_id': -1,\n",
+       "   'id': 67873,\n",
+       "   'user_id': 562},\n",
+       "  {'badge_id': 105,\n",
+       "   'count': 1,\n",
+       "   'granted_at': '2017-10-09T23:54:03.653Z',\n",
+       "   'granted_by_id': -1,\n",
+       "   'id': 68149,\n",
+       "   'user_id': 562}],\n",
+       " 'users': [{'admin': False,\n",
+       "   'avatar_template': '/user_avatar/community.wanikani.com/polv/{size}/427_1.png',\n",
+       "   'id': 562,\n",
+       "   'moderator': False,\n",
+       "   'username': 'polv'},\n",
+       "  {'admin': True,\n",
+       "   'avatar_template': '/user_avatar/community.wanikani.com/system/{size}/8290_1.png',\n",
+       "   'id': -1,\n",
+       "   'moderator': True,\n",
+       "   'username': 'system'}]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "board.GET('users/polv')"
+    "json.loads(board.GET('users/polv'))"
    ]
   },
   {
